--- a/docs/docs/genai/tracing/search-traces.mdx
+++ b/docs/docs/genai/tracing/search-traces.mdx
@@ -253,9 +253,7 @@ eval_data = traces.rename(
     }
 )
 
-results = mlflow.genai.evaluate(
-    model, eval_data, targets="ground_truth", model_type="question-answering"
-)
+results = mlflow.genai.evaluate(data=eval_data, predict_fn=model, scorers=["default"])
 ```
 
 :::note
