--- a/docs/docs/genai/tracing/search-traces.mdx
+++ b/docs/docs/genai/tracing/search-traces.mdx
@@ -253,7 +253,7 @@ eval_data = traces.rename(
     }
 )
 
-results = mlflow.genai.evaluate(data=eval_data, predict_fn=model, scorers=["default"])
+results = mlflow.genai.evaluate(data=eval_data, predict_fn=model, scorers=[...])
 ```
 
 :::note
@@ -371,9 +371,7 @@ eval_dataset = conversation_data.rename(
 )
 
 # Use with MLflow evaluate
-results = mlflow.genai.evaluate(
-    predict_fn=your_model, data=eval_dataset, scorers=["default"]
-)
+results = mlflow.genai.evaluate(predict_fn=your_model, data=eval_dataset, scorers=[...])
 ```
 
 ### Environment Monitoring
