Apply suggestions from code review
Co-authored-by: Yuki Watanabe <31463517+B-Step62@users.noreply.github.com>
Signed-off-by: Harutaka Kawamura <hkawamura0130@gmail.com>

--- a/docs/docs/genai/tracing/search-traces.mdx
+++ b/docs/docs/genai/tracing/search-traces.mdx
@@ -253,7 +253,7 @@ eval_data = traces.rename(
     }
 )
 
-results = mlflow.genai.evaluate(data=eval_data, predict_fn=model, scorers=[...])
+results = mlflow.genai.evaluate(data=eval_data, scorers=[...])
 ```
 
 :::note
@@ -371,7 +371,7 @@ eval_dataset = conversation_data.rename(
 )
 
 # Use with MLflow evaluate
-results = mlflow.genai.evaluate(predict_fn=your_model, data=eval_dataset, scorers=[...])
+results = mlflow.genai.evaluate(data=eval_dataset, scorers=[...])
 ```
 
 ### Environment Monitoring
