--- a/mlflow/server/js/src/lang/default/en.json
+++ b/mlflow/server/js/src/lang/default/en.json
@@ -411,10 +411,6 @@
     "defaultMessage": "Step",
     "description": "Experiment page > view controls > global settings for line chart view > settings for x-axis > label for setting to use step axis in all charts"
   },
-  "55sVHY": {
-    "defaultMessage": "Compare experiments",
-    "description": "Label for the compare experiments action on the experiments list page"
-  },
   "58xhem": {
     "defaultMessage": "Click to pin the run",
     "description": "A tooltip for the pin icon button in the runs chart tooltip next to the not pinned run"
@@ -802,6 +798,10 @@
   "9pJlQd": {
     "defaultMessage": "No prompt versions created",
     "description": "A header for the empty state in the prompt versions table"
+  },
+  "9ut1Fj": {
+    "defaultMessage": "Create",
+    "description": "Label for the create experiment action on the experiments list page"
   },
   "9vj5Ap": {
     "defaultMessage": "No metrics recorded",
@@ -1383,10 +1383,6 @@
     "defaultMessage": "Trace data is not available for in-progress traces. Please wait for the trace to complete.",
     "description": "Experiment page > traces data drawer > in-progress description"
   },
-  "K/Z4Y5": {
-    "defaultMessage": "Select at least two experiments from the table to compare them",
-    "description": "Experiments page compare experiments button tooltip message"
-  },
   "K5rmCE": {
     "defaultMessage": "S3",
     "description": "Experiment dataset drawer > source type > S3 source type label"
@@ -1959,10 +1955,6 @@
     "defaultMessage": "MLflow UI automatically fetches metric histories for active runs and updates the metrics plot with a {interval} second interval.",
     "description": "Helpful tooltip message to explain the automatic metrics plot update"
   },
-  "UFgh9k": {
-    "defaultMessage": "Create experiment",
-    "description": "Label for the create experiment action on the experiments list page"
-  },
   "UGAKJp": {
     "defaultMessage": "X-axis:",
     "description": "Label text for x-axis in contour plot comparison in MLflow"
@@ -2175,10 +2167,6 @@
     "defaultMessage": "Details",
     "description": "Title for the details section on the logged model details page"
   },
-  "XdanFp": {
-    "defaultMessage": "Select experiments from the table to be deleted",
-    "description": "Experiments page delete experiments button tooltip message"
-  },
   "Xm5xxu": {
     "defaultMessage": "Request error",
     "description": "Error state title displayed in the logged models list page"
@@ -2210,6 +2198,10 @@
   "Y9ZFyN": {
     "defaultMessage": "Download artifact",
     "description": "Link to download the artifact of the experiment"
+  },
+  "YECxws": {
+    "defaultMessage": "Compare",
+    "description": "Label for the compare experiments action on the experiments list page"
   },
   "YINJEO": {
     "defaultMessage": "Metric",
