--- a/docs/docs/genai/tracing/integrations/listing/ollama.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/ollama.mdx
@@ -65,6 +65,66 @@ response = client.chat.completions.create(
 )
 ```
 
+## Token usage
+
+MLflow >= 3.2.0 supports token usage tracking for local LLM endpoint served through OpenAI SDK. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute. The total token usage throughout the trace will be
+available in the `token_usage` field of the trace info object.
+
+```python
+import json
+import mlflow
+
+mlflow.openai.autolog()
+
+from openai import OpenAI
+
+client = OpenAI(
+    base_url="http://localhost:11434/v1",  # The local Ollama REST endpoint
+    api_key="dummy",  # Required to instantiate OpenAI client, it can be a random string
+)
+
+response = client.chat.completions.create(
+    model="llama3.2:1b",
+    messages=[
+        {"role": "system", "content": "You are a science teacher."},
+        {"role": "user", "content": "Why is the sky blue?"},
+    ],
+)
+
+# Get the trace object just created
+last_trace_id = mlflow.get_last_active_trace_id()
+trace = mlflow.get_trace(trace_id=last_trace_id)
+
+# Print the token usage
+total_usage = trace.info.token_usage
+print("== Total token usage: ==")
+print(f"  Input tokens: {total_usage['input_tokens']}")
+print(f"  Output tokens: {total_usage['output_tokens']}")
+print(f"  Total tokens: {total_usage['total_tokens']}")
+
+# Print the token usage for each LLM call
+print("\n== Detailed usage for each LLM call: ==")
+for span in trace.data.spans:
+    if usage := span.get_attribute("mlflow.chat.tokenUsage"):
+        print(f"{span.name}:")
+        print(f"  Input tokens: {usage['input_tokens']}")
+        print(f"  Output tokens: {usage['output_tokens']}")
+        print(f"  Total tokens: {usage['total_tokens']}")
+```
+
+```bash
+== Total token usage: ==
+  Input tokens: 23
+  Output tokens: 194
+  Total tokens: 217
+
+== Detailed usage for each LLM call: ==
+Completions:
+  Input tokens: 23
+  Output tokens: 194
+  Total tokens: 217
+```
+
 ### Disable auto-tracing
 
 Auto tracing for Ollama can be disabled globally by calling `mlflow.openai.autolog(disable=True)` or `mlflow.autolog(disable=True)`.
