--- a/docs/docs/classic-ml/evaluation/model-eval.mdx
+++ b/docs/docs/classic-ml/evaluation/model-eval.mdx
@@ -753,66 +753,59 @@ def reproducible_evaluation(model, eval_data, targets, random_seed=42):
   </TabItem>
 </Tabs>
 
-## Handling Single-Class Data in Binary Classification
+## Handling Single-Class Binary Classification with `label_list`
 
-When evaluating a binary classifier, you may encounter a scenario where your evaluation dataset contains only one of the two classes (e.g., all `True` or all `1`). This is common in highly imbalanced datasets or with specific data batches.
+By default, MLflow infers the set of possible classes from your data. However, for binary classification, some evaluation metrics (like the confusion matrix) require both classes to be present. If your evaluation dataset contains only a single class (e.g., all zeros), you **must** specify the full set of possible classes using the `label_list` parameter in `evaluator_config`.
 
-By default, `mlflow.evaluate` will raise an error in this case, as it cannot construct a 2x2 confusion matrix from a single class.
+**Why is this needed?**
+This ensures that metrics and plots (such as the confusion matrix) are always computed in a consistent 2x2 format, even if only one class is present in your data.
 
-**Solution**: You can instruct MLflow to handle this gracefully by explicitly providing the full set of expected labels via the `evaluator_config`. This ensures that metrics like `true_positives` and `true_negatives` are calculated correctly against the complete label space.
-
-Here's how to configure the `default` evaluator to handle a single-class dataset:
+### Example: Forcing a 2-Class Confusion Matrix
 
 ```python
+import mlflow
 import pandas as pd
 import numpy as np
-import mlflow
-from mlflow.pyfunc import PythonModel
 
-# 1) Create a toy dataset where only class '1' appears
-df = pd.DataFrame(
-    {
-        "feature": np.random.randn(10),
-        "target": np.ones(10, dtype=int),  # All labels are '1'
-    }
-)
+# Assume you have a model logged at model_uri
+X = pd.DataFrame(np.random.randn(50, 2), columns=["feature1", "feature2"])
+y = np.zeros(50)  # Only class 0 present
 
-
-# 2) Define a model that always predicts '1'
-class AlwaysOneModel(PythonModel):
-    def predict(self, context, model_input):
-        return np.ones(len(model_input), dtype=int)
-
-
-# 3) Log the model
-with mlflow.start_run() as run:
-    model_info = mlflow.pyfunc.log_model(
-        name="always_one_model",
-        python_model=AlwaysOneModel(),
-    )
-
-# 4) Evaluate with an explicit label_list
-#    This forces a 2x2 confusion matrix, preventing a crash.
 result = mlflow.evaluate(
-    model=model_info.model_uri,
-    data=df,
-    targets="target",
+    model=model_uri,
+    data=X,
+    targets=y,
     model_type="classifier",
-    evaluators=["default"],
-    evaluator_config={
-        "default": {
-            "label_list": [0, 1],  # <-- Force a two-class confusion matrix
-            "pos_label": 1,  # (Optional) Define the positive class
-        }
-    },
+    evaluator_config={"label_list": [0, 1]},  # Explicitly specify both classes
 )
-
-# The metrics are calculated correctly against the full label space
-# Expected: true_positives=10, false_negatives=0, true_negatives=0, false_positives=0
-print(result.metrics)
 ```
 
-By setting `label_list: [0, 1]`, you tell MLflow to generate a confusion matrix with both classes, even though class `0` never appears in the data. This correctly results in `true_positives` being 10 and all other confusion matrix entries being 0, which is the expected behavior.
+If you do **not** provide a `label_list` of length 2 for single-class data, MLflow will raise an error:
+
+```
+MlflowException: Evaluation dataset for classification must contain at least two unique labels, but only 1 unique label(s) were found.
+```
+
+> **Tip:** For normal binary or multiclass data, you do **not** need to specify `label_list`—MLflow will infer it automatically.
+
+### Multiclass with Missing Classes
+
+The same principle applies to multiclass classification. If your evaluation dataset is missing some classes that your model was trained on, you can specify the complete set of expected classes:
+
+```python
+# Example: Model trained on 4 classes (0, 1, 2, 3) but evaluation data only has classes 0 and 2
+y_missing_classes = np.random.choice([0, 2], size=100)  # Only classes 0 and 2 present
+
+result = mlflow.evaluate(
+    model=model_uri,
+    data=X,
+    targets=y_missing_classes,
+    model_type="classifier",
+    evaluator_config={"label_list": [0, 1, 2, 3]},  # Specify all expected classes
+)
+```
+
+This ensures that confusion matrices and per-class metrics are computed for all expected classes, with zero counts for missing classes.
 
 ## Conclusion
 
