--- a/docs/docs/genai/tracing/integrations/listing/crewai.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/crewai.mdx
@@ -194,6 +194,40 @@ trip_crew = TripCrew("California", "Tokyo", "Dec 12 - Dec 20", "sports")
 result = trip_crew.run()
 ```
 
+## Token usage
+
+MLflow >= 3.2.0 supports token usage tracking for CrewAI. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute. The total token usage throughout the trace will be
+available in the `token_usage` field of the trace info object.
+
+```python
+import json
+import mlflow
+
+mlflow.crewai.autolog()
+
+# Run the tool calling agent defined in the previous section
+trip_crew = TripCrew("California", "Tokyo", "Dec 12 - Dec 20", "sports")
+result = trip_crew.run()
+
+# Get the trace object just created
+last_trace_id = mlflow.get_last_active_trace_id()
+trace = mlflow.get_trace(trace_id=last_trace_id)
+
+# Print the token usage
+total_usage = trace.info.token_usage
+print("== Total token usage: ==")
+print(f"  Input tokens: {total_usage['input_tokens']}")
+print(f"  Output tokens: {total_usage['output_tokens']}")
+print(f"  Total tokens: {total_usage['total_tokens']}")
+```
+
+```bash
+== Total token usage: ==
+  Input tokens: 73358
+  Output tokens: 1977
+  Total tokens: 75335
+```
+
 ### Disable auto-tracing
 
 Auto tracing for CrewAI can be disabled globally by calling `mlflow.crewai.autolog(disable=True)` or `mlflow.autolog(disable=True)`.
