Fix confusion matrix validation and improve classifier evaluation robustness
- Fix confusion matrix shape validation in _get_binary_classifier_metrics
  * Now properly validates that labels parameter results in 2x2 matrix
  * Raises clear error for mismatched labels/data combinations
  * Ensures robust handling of edge cases

- Improve type normalization and validation
  * Enhanced _normalize_data_types method with better error messages
  * Validates consistent types across label_list and pos_label
  * Handles mixed numeric/string types with clear error messages

- Fix CSV artifact test robustness
  * Update test_csv_artifact_no_index to properly validate no index column
  * Use custom index to ensure index=False behavior is tested correctly
  * Remove false positive assertions that could fail with valid data

- Update documentation with comprehensive guidance
  * Add fast-reference table for classifier evaluation scenarios
  * Document edge case handling for single-class and missing-class data
  * Include type compatibility requirements and validation behavior
  * Add transparency and auditability information

- Add comprehensive test coverage
  * test_confusion_matrix_shape_validation: Validates proper error handling
  * test_mixed_type_validation_raises_error: Tests type consistency
  * test_pos_label_type_consistency: Ensures type normalization works
  * test_csv_artifact_no_index: Verifies CSV format compatibility

All tests pass and the implementation is now more robust for production use.

Signed-off-by: mohammadsubhani <subhanimuhammed@gmail.com>

--- a/docs/docs/classic-ml/evaluation/model-eval.mdx
+++ b/docs/docs/classic-ml/evaluation/model-eval.mdx
@@ -105,6 +105,15 @@ print(f"ROC AUC: {metrics['roc_auc']:.3f}")
   <li>Confusion Matrix and Classification Report</li>
 </ul>
 
+**Fast-Reference Table:**
+
+| Scenario                       | Required Parameter(s) | MLflow Behavior                                  |
+|--------------------------------|----------------------|--------------------------------------------------|
+| All classes present            | *(none)*             | Infers all options, no need for `label_list`     |
+| Single-class in eval data      | `label_list`         | Required. Error if not supplied                  |
+| Missing classes (multiclass)   | `label_list`         | Recommended. Otherwise, only present classes used|
+| Binary, want custom pos_label  | `pos_label`          | Use for metrics (default: last in label_list)    |
+
   </TabItem>
   <TabItem value="regression" label="Regression">
 
@@ -241,6 +250,7 @@ result = mlflow.models.evaluate(
 
 - **`pos_label`**: Positive class for binary classification metrics. Only meaningful for binary classification (2 classes). For multiclass, this parameter is ignored.
 - **`label_list`**: Complete set of expected classes. Required when evaluation data is missing expected classes.
+  > **Note:** All items in `label_list` must be of the same type or convertible to a common numeric type (e.g., int, float, numeric string). Mixing string labels with non-numeric values (e.g., `['cat', 1]`) is not supported and will raise an error.
 - **`average`**: Averaging strategy for multiclass metrics ("macro", "micro", "weighted").
 
 :::tip Binary vs Multiclass Behavior
