--- a/docs/docs/genai/tracing/integrations/listing/llama_index.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/llama_index.mdx
@@ -66,6 +66,58 @@ query_engine = index.as_query_engine()
 response = query_engine.query("What was the first program the author wrote?")
 ```
 
+## Token usage
+
+MLflow >= 3.2.0 supports token usage tracking for LlamaIndex. The token usage for each LLM call will be logged in the `mlflow.chat.tokenUsage` attribute. The total token usage throughout the trace will be
+available in the `token_usage` field of the trace info object.
+
+```python
+import json
+import mlflow
+from llama_index.llms.openai import OpenAI
+
+mlflow.llama_index.autolog()
+
+# Use the chat complete method to create new chat.
+llm = OpenAI(model="gpt-3.5-turbo")
+Settings.llm = llm
+response = llm.chat(
+    [ChatMessage(role="user", content="What is the capital of France?")]
+)
+
+# Get the trace object just created
+last_trace_id = mlflow.get_last_active_trace_id()
+trace = mlflow.get_trace(trace_id=last_trace_id)
+
+# Print the token usage
+total_usage = trace.info.token_usage
+print("== Total token usage: ==")
+print(f"  Input tokens: {total_usage['input_tokens']}")
+print(f"  Output tokens: {total_usage['output_tokens']}")
+print(f"  Total tokens: {total_usage['total_tokens']}")
+
+# Print the token usage for each LLM call
+print("\n== Detailed usage for each LLM call: ==")
+for span in trace.data.spans:
+    if usage := span.get_attribute("mlflow.chat.tokenUsage"):
+        print(f"{span.name}:")
+        print(f"  Input tokens: {usage['input_tokens']}")
+        print(f"  Output tokens: {usage['output_tokens']}")
+        print(f"  Total tokens: {usage['total_tokens']}")
+```
+
+```bash
+== Total token usage: ==
+  Input tokens: 14
+  Output tokens: 7
+  Total tokens: 21
+
+== Detailed usage for each LLM call: ==
+OpenAI.chat:
+  Input tokens: 14
+  Output tokens: 7
+  Total tokens: 21
+```
 
 ### LlamaIndex workflow
 
