--- a/docs/docs/genai/tracing/integrations/listing/dspy.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/dspy.mdx
@@ -168,4 +168,4 @@ optimized = tp.compile(cot, trainset=trainset)
 
 ### Disable auto-tracing
 
-Auto tracing for LlamaIndex can be disabled globally by calling `mlflow.llama_index.autolog(disable=True)` or `mlflow.autolog(disable=True)`.
+Auto tracing for DSPy can be disabled globally by calling `mlflow.dspy.autolog(disable=True)` or `mlflow.autolog(disable=True)`.
